Closing side nav after menu item clicked; Made toolbar fixed on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .ea-container {
   display: flex;
   flex-direction: column;
@@ -6,42 +8,45 @@
   bottom: 0;
   left: 0;
   right: 0;
-}
 
-.ea-is-mobile .ea-toolbar {
-  position: fixed;
-  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-  z-index: 2;
-}
+  .ea-sidenav-container {
+    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+       causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+    flex: 1;
+  }
 
-.ea-sidenav-container {
-  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1;
-}
-
-.ea-is-mobile .ea-sidenav-container {
-  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-     `<body>` to be our scrolling element for mobile layouts. */
-  flex: 1 0 auto;
-}
-
-.ea-header-title {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  .ea-header-title-part1 {
-    margin-right: .5em;
+  .ea-header-title {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    align-items: center;
 
-    div.ea-header-title-part1-arch {
-      margin-bottom: -.25em;
-    }
-    div.ea-header-title-part1-eng {
-      margin-top: -.25em;
+    .ea-header-title-part1 {
+      margin-right: .5em;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+
+      div.ea-header-title-part1-arch {
+        margin-bottom: -.25em;
+      }
+      div.ea-header-title-part1-eng {
+        margin-top: -.25em;
+      }
     }
   }
 }
+
+@media (max-width: 600px) {
+  .ea-container {
+
+    .ea-sidenav-container {
+      /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+         `<body>` to be our scrolling element for mobile layouts. */
+      flex: 1 0 auto;
+      padding-top: $ea-toolbar-height-mobile;
+    }
+
+  }
+}
+
+
